# quota

./: .gitignore  COPYING  Changelog  Makefile.am  Makefile.in  README.ldap-support  README.mailserver  bylabel.c  common.c  common.h  config.h.in  configure  configure.ac  configure.in  convertquota.8  convertquota.c  dqblk_rpc.h  dqblk_v1.h  dqblk_v2.h  dqblk_xfs.h  edquota.8  edquota.c  mntopt.h  pot.h  quot.8  quot.c  quot.h  quota.1  quota.c  quota.h  quota_nld.8  quota_nld.c  quota_tree.h  quotacheck.8  quotacheck.c  quotacheck.h  quotacheck_v1.c  quotacheck_v2.c  quotactl.2  quotaio.c  (+39 more)
doc/: edquota(8).html  fstab(5).html  quota(1).html  quota.html  quota4th.fig  quotacheck(8).html  quotactl(2).html  quotadoc.sgml  quotaon(8).html  repquota(8).html  rquotad(8).html
po/: .gitignore  LINGUAS  Makevars  POTFILES.in  cs.po  de.po  fr.po  pl.po
